fixtures/python/choke-point/should_fail/unittest_mock_in_runtime.py
from unittest.mock import Mock, patch

# Test support in production code
client = Mock()
